deployment/argocd/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: discover
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: discover
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 6379
      name: redis
  selector:
    app: redis
