deployment/argocd/discover.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: discover-server
  namespace: discover
  labels:
    app: discover-server
spec:
  selector:
    matchLabels:
      app: discover-server
  template:
    metadata:
      labels:
        app: discover-server
    spec:
      containers:
        - name:  discover-server
          image: albertoclarit/discover:0.0.9
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discover-server
  namespace: discover
  labels:
    app: discover-server
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      name: discover-server
  selector:
    app: discover-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discover-ingress
  namespace: discover
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: discover.172.104.38.74.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/discover/(.*)"
            backend:
              service:
                name: discover-server
                port:
                  number: 8080
